<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/navigation" app:startDestination="@id/timelineFragment">

    <fragment android:id="@+id/timelineFragment" android:name="io.svechnikov.tjgram.features.timeline.TimelineFragment"
              android:label="@string/timeline_title">
        <action android:id="@+id/action_timelineFragment_to_selectImageFragment"
                app:destination="@id/selectImageFragment"/>
        <action android:id="@+id/action_timelineFragment_to_selectAuthMethodFragment"
                app:destination="@id/selectAuthMethodFragment"/>
    </fragment>
    <fragment android:id="@+id/selectAuthMethodFragment"
              android:name="io.svechnikov.tjgram.features.auth.selectmethod.SelectAuthMethodFragment"
              android:label="@string/select_auth_method_title">
        <action android:id="@+id/action_selectAuthMethodFragment_to_qrAuthFragment"
                app:destination="@id/qrAuthFragment"/>
    </fragment>
    <fragment android:id="@+id/qrAuthFragment" android:name="io.svechnikov.tjgram.features.auth.qr.QrAuthFragment"
              android:label="@string/qr_auth_title">
        <action android:id="@+id/action_qrAuthFragment_to_timelineFragment" app:destination="@id/timelineFragment"
                app:popUpTo="@+id/timelineFragment" app:popUpToInclusive="true"/>
    </fragment>
    <fragment android:id="@+id/selectImageFragment"
              android:name="io.svechnikov.tjgram.features.addpost.selectimage.SelectImageFragment"
              android:label="@string/select_image_title">
        <action android:id="@+id/action_selectImageFragment_to_sendImageFragment"
                app:destination="@id/sendImageFragment"/>
        <action android:id="@+id/action_selectImageFragment_to_selectAuthMethodFragment"
                app:destination="@id/selectAuthMethodFragment"/>
    </fragment>
    <fragment android:id="@+id/sendImageFragment"
              android:name="io.svechnikov.tjgram.features.addpost.sendimage.SendImageFragment"
              android:label="@string/send_image_title">
        <argument android:name="imageId" app:argType="integer"/>
        <action android:id="@+id/action_sendImageFragment_to_timelineFragment" app:destination="@id/timelineFragment"
                app:popUpTo="@+id/timelineFragment" app:popUpToInclusive="true"/>
    </fragment>
</navigation>