<?xml version="1.0" encoding="utf-8"?>
<layout>
    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    xmlns:android="http://schemas.android.com/apk/res/android">

        <com.google.android.material.tabs.TabLayout android:layout_width="match_parent"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/tabs">
            <com.google.android.material.tabs.TabItem android:layout_width="wrap_content"
                                                      android:layout_height="wrap_content"
                                                      android:text="@string/timeline_tab_new"/>
            <com.google.android.material.tabs.TabItem android:layout_width="wrap_content"
                                                      android:layout_height="wrap_content"
                                                      android:text="@string/timeline_tab_week"/>
            <com.google.android.material.tabs.TabItem android:layout_width="wrap_content"
                                                      android:layout_height="wrap_content"
                                                      android:text="@string/timeline_tab_month"/>
            <com.google.android.material.tabs.TabItem android:layout_width="wrap_content"
                                                      android:layout_height="wrap_content"
                                                      android:text="@string/timeline_tab_year"/>
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
                android:id="@+id/pager"
                android:layout_below="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

    </RelativeLayout>
</layout>